--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>boawebapp</groupId>
-  <artifactId>webapp1</artifactId>
+  <groupId>mavenbuild</groupId>
+  <artifactId>mavenbuildpra</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>webapp1 Maven Webapp</name>
+  <name>mavenbuildpra Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -18,6 +18,7 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -27,21 +28,51 @@
     </dependency>
   </dependencies>
 
-  <build>
-    <finalName>webapp1</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-	    <plugin>
-           <groupId>org.codehaus.mojo</groupId>
-           <artifactId>tomcat-maven-plugin</artifactId>
-           <version>1.0</version>
+  <profiles>
+   <profile>
+     <id>test</id>
+     <build>
+       <plugins>
+         <plugin>
+           <artifactId>maven-antrun-plugin</artifactId>
+           <executions>
+             <execution>
+               <phase>test</phase>
+               <goals>
+                 <goal>run</goal>
+               </goals>
+               <configuration>
+                 <tasks>
+                   <delete file="${project.build.outputDirectory}/environment.properties"/>
+                   <copy file="src/main/resources/environment.test.properties"
+                         tofile="${project.build.outputDirectory}/environment.properties"/>
+                 </tasks>
+               </configuration>
+             </execution>
+           </executions>
+         </plugin>
+         <plugin>
+           <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
-              <url>http://localhost:8082/manager/text</url>
-			  <server>tomcat</server>
-			  <path>boawebapp</path>
+             <skip>true</skip>
            </configuration>
-        </plugin>
+         </plugin>
+         <plugin>
+           <artifactId>maven-jar-plugin</artifactId>
+           <executions>
+             <execution>
+               <phase>package</phase>
+               <goals>
+                 <goal>war</goal>
+               </goals>
+               <configuration>
+                 <classifier>test</classifier>
+               </configuration>
+             </execution>
+           </executions>
+         </plugin>
        </plugins>
-    </pluginManagement>
-  </build>
-</project>
+     </build>
+   </profile>
+ </profiles>
+ </project>
